# personal-productivity-ai

./: .gitignore  AGENTS.md  LICENSE  README.md
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: agy.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
doc/planning/: UI-Feedback.md  agent-as-tab-plan.md  egui.md  prompt-injection-security.md
planning/: virtual-scroll-tree-research.md
specs/001-batch-prompt-processing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-inline-text-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pdf-markdown-conversion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/desktop/: ARCHITECTURE_C4.md  Cargo.toml  MK_CHEATSHEET_COMPLIANCE.md  README.md  REFACTOR_TODOS.md  RUST.md  SPEC.md  Tools.md  test_output.md
src/desktop/.cargo/: config.toml
src/desktop/src/: agent.rs  background_task.rs  browser.rs  config.rs  directory_tracker.rs  document.rs  editor.rs  error.rs  file_events.rs  file_processor.rs  lib.rs  main.rs  messages.rs  print.rs  tag_manager.rs
src/desktop/src/agent/: agent_impl.rs  agent_impl_tests.rs  context.rs  llm_client.rs  manager.rs  mod.rs  prompt_builder.rs  response_formatter.rs  tool_executor.rs
src/desktop/src/background/: bus_router.rs  indexer.rs  manager.rs  mod.rs  models.rs  pdf_converter.rs  vision_processor.rs  watcher.rs
src/desktop/src/batch/: coordinator.rs  dialog.rs  discoverer.rs  executor.rs  file_matcher.rs  mod.rs  prompts.rs  types.rs
src/desktop/src/config/: virtual_path.rs
src/desktop/src/tools/: Spotify.md  caldav.rs  carddav.rs  context.rs  dtos.rs  filesystem.rs  mod.rs  registry.rs  weather.rs  web.rs  yaml_header.rs
src/desktop/src/tools/csv_db/: mod.rs  operations.rs  query.rs  schema.rs
src/desktop/src/tools/jmap/: calendar.rs  client.rs  contacts.rs  email.rs  mod.rs  tests.rs
src/desktop/src/ui/: app.rs  background_logs.rs  dialog_manager.rs  mod.rs  modals.rs  os_shell.rs  panel_layout.rs  render.rs  render_tests.rs  selection_manager.rs  tab_manager.rs  tree.rs
src/desktop/src/ui/panels/: bottom.rs  center.rs  left.rs  mod.rs  right.rs  top.rs
src/desktop/src/utils/: markdown.rs  mod.rs  path.rs  tags.rs
src/desktop/tests/: background_manager_test.rs  discovery_test.rs  document_test.rs  editor_test.rs  log_persistence_test.rs  pdf_converter_test.rs
(+51 files in other folders)
