[package]
name = "fastmd"
version = "1.0.0"
edition = "2024"
description = "Fast Markdown viewer with AI agent capabilities"
license = "MIT"
repository = "https://github.com/user/fastmd"
categories = ["command-line-utilities", "text-editors", "development-tools"]
keywords = ["markdown", "viewer", "ai", "agent"]

[dependencies]
anyhow = "1.0.104"
mimalloc = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22.1"
bytes = "1"
chrono = "0.4.45"
eframe = "0.27"
fast-dav-rs = "0.4.3"
fast_h2m = "*"
imap = "2.4.1"
jmap-calendars-client = "0.1.2"
jmap-client = "0.4.2"
notify = "6.0"
playwright-rs = "0.14.1"
pulldown-cmark = { version = "0.10", features = ["html"] }
rustls = { version = "0.23", features = ["ring"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
trash = "5.2.6"
ureq = { version = "2.9", features = ["json"] }
walkdir = "2.4"
csv = "1.4.0"
evalexpr = "13.1.0"
html-escape = "0.2"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.53.0", features = ["rt", "rt-multi-thread", "macros"] }
filetime = "0.2"

[[bin]]
name = "fastmd"
path = "src/main.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

